# edge-ai-inference-platform

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
examples/: deploy_defect_detector.py
src/connectivity/: opc_ua_server.py  plc_connector.py
src/runtime/: edge_runtime.py
tests/: test_edge_runtime.py
