[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-ai-inference-platform"
version = "1.0.0"
description = "Deploy and manage ML models at the manufacturing edge"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Manufacturing AI Team", email = "team@manufacturing-ai.dev"}
]

dependencies = [
    "onnxruntime>=1.16.0",
    "asyncua>=0.9.0",
    "pymodbus>=3.0.0",
    "torch>=2.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310"]
